--- a/HybridProject1/test-output/old/Default suite/classes.html
+++ b/HybridProject1/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.orange.HybridProject1.HeadLessTest</td>
+<td>com.orange.HybridProject1.IETest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>headLess</td>
+<td>ieTestMethod</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
